--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -73,5 +73,6 @@
 	<modules>
 		<module>core-java</module>
 		<module>java8</module>
+		<module>multi-threading</module>
 	</modules>
 </project>
