--- a/java-practice/pom.xml
+++ b/java-practice/pom.xml
@@ -8,9 +8,8 @@
   <artifactId>java-practice</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>core-java</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>java</name>
+
 
   <parent>
     <groupId>com.java</groupId>
