--- a/java-core/pom.xml
+++ b/java-core/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.java</groupId>
-    <artifactId>java-practice</artifactId>
+    <artifactId>java-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>java</name>
     <parent>
         <groupId>com.java</groupId>
-        <artifactId>java-project</artifactId>
+        <artifactId>java-core</artifactId>
         <version>0.0.1</version>
     </parent>
 
