--- a/java-core/pom.xml
+++ b/java-core/pom.xml
@@ -4,14 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.java</groupId>
-    <artifactId>java-core</artifactId>
+    <artifactId>java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <name>java</name>
     <parent>
-        <groupId>com.java</groupId>
-        <artifactId>java-core</artifactId>
+        <groupId>com.ksk</groupId>
+        <artifactId>java</artifactId>
         <version>0.0.1</version>
     </parent>
 
