--- a/java-core/pom.xml
+++ b/java-core/pom.xml
@@ -6,17 +6,19 @@
 
     <artifactId>java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>java</name>
+
+    <parent>
+        <groupId>com.ksk</groupId>
+        <artifactId>java-tutorials</artifactId>
+        <version>0.0.1</version>
+    </parent>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
-    <name>java</name>
-    <parent>
-        <groupId>com.ksk</groupId>
-        <artifactId>java</artifactId>
-        <version>0.0.1</version>
-    </parent>
 
     <dependencies>
         <dependency>
