--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -2,25 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ksk</groupId>
 	<artifactId>java8</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>java8</name>
-	<description>Demo project for Spring Boot</description>
+	<description>java 8 tutorials</description>
+
+	<parent>
+		<groupId>com.ksk</groupId>
+		<artifactId>java-tutorials</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
 	<properties>
-		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
 </project>
