--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -9,7 +9,7 @@
 
     <parent>
         <groupId>com.ksk</groupId>
-        <artifactId>java-tutorials</artifactId>
+        <artifactId>java-tutorial</artifactId>
         <version>1.0.0</version>
     </parent>
 
